LPS-120948 Fix navbars overlap in the form view and table view when publications is enabled

--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/components/_upper_toolbar.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/components/_upper_toolbar.scss
@@ -26,3 +26,9 @@ body.open .app-builder-upper-toolbar {
 		padding: 0 16px;
 	}
 }
+
+.publications-enabled {
+	.app-builder-upper-toolbar {
+		top: 80px;
+	}
+}
