--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/pages/_form_view.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/pages/_form_view.scss
@@ -182,6 +182,14 @@
 			}
 		}
 	}
+
+	.multi-panel-sidebar.publications-enabled {
+		top: 144px;
+
+		.taglib-empty-result-message {
+			margin-bottom: 24px;
+		}
+	}
 }
 
 .field-type-drag-preview .custom-object-field {
