--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/pages/_table_view.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/pages/_table_view.scss
@@ -242,3 +242,12 @@ $appBuilderTableViewTransitionTime: 0.5s;
 		margin: 1.5rem -1.5rem;
 	}
 }
+
+.publications-enabled .app-builder-table-view {
+	&__sidebar {
+		.default,
+		.secondary {
+			top: 144px;
+		}
+	}
+}
